--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-native-firebase/app": "^6.0.0",
     "@react-native-firebase/auth": "^6.0.0",
     "@react-native-firebase/database": "^6.0.0",
-    "react": "16.9.0",
+    "moment": "^2.24.0",
+    "react": "^16.9.0",
+    "react-live-clock": "^3.1.0",
     "react-native": "0.61.1",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-reanimated": "^1.3.0",
