--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^6.0.0",
     "@react-native-firebase/auth": "^6.0.0",
     "@react-native-firebase/database": "^6.0.0",
+    "buffer": "^5.4.3",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-live-clock": "^3.1.0",
