--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-live-clock": "^3.1.0",
     "react-native": "0.61.1",
     "react-native-action-button": "^2.8.5",
+    "react-native-calendars": "^1.212.0",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-modal": "^11.4.0",
     "react-native-reanimated": "^1.3.0",
