--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-native": "0.61.1",
     "react-native-action-button": "^2.8.5",
     "react-native-calendars": "^1.212.0",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-modal": "^11.4.0",
+    "react-native-paper": "^3.1.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
