--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.61.1",
     "react-native-action-button": "^2.8.5",
     "react-native-calendars": "^1.212.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-modal": "^11.4.0",
