--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "react": "^16.9.0",
     "react-live-clock": "^3.1.0",
     "react-native": "0.61.1",
+    "react-native-24h-timepicker": "^1.1.0",
     "react-native-action-button": "^2.8.5",
     "react-native-calendars": "^1.212.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dialog": "^5.6.0",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-modal": "^11.4.0",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-paper": "^3.1.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-vector-icons": "^6.6.0",
