--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.61.1",
     "react-native-24h-timepicker": "^1.1.0",
     "react-native-action-button": "^2.8.5",
+    "react-native-calendar-picker": "^6.0.2",
     "react-native-calendars": "^1.212.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-dialog": "^5.6.0",
@@ -30,6 +31,7 @@
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-paper": "^3.1.1",
     "react-native-reanimated": "^1.3.0",
+    "react-native-ui-xg": "^0.0.6",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-tabs": "^2.5.5"
